test_programs/compile_failure/noirc_frontend_tests_enums_missing_int_ranges_with_negatives/src/main.nr

        fn main() {
            let x: i32 = -4;
            match x {
                -5 => (),
                0 => (),
                3 => (),
            }
        }
    